roc 내용 업데이트

--- a/파이썬으로할수있는모든것/part6/ch05_RandomForest.ipynb
+++ b/파이썬으로할수있는모든것/part6/ch05_RandomForest.ipynb
@@ -1427,8 +1427,11 @@
     "* ![TPR](images/TPR.PNG)\n",
     "### ROC Curve\n",
     "* ![ROC Curve](images/roc.PNG)\n",
+    "* threshold를 바꿔가며 TPR과 FPR의 변화를 그린 그래프\n",
+    "    * ROC Curve를 그릴땐 예측값이 아닌 확률이 들어간다.\n",
     "### AUC\n",
     "* Area Under the Curve\n",
+    "    * ROC Curve의 아래 면적값\n",
     "    * 0.5 ~ 1.0 사이의 값을 가짐(좋은 모델일수록 1에 가까움)"
    ],
    "metadata": {
