--- a/파이썬으로할수있는모든것/part6/ch05_RandomForest.ipynb
+++ b/파이썬으로할수있는모든것/part6/ch05_RandomForest.ipynb
@@ -13,7 +13,7 @@
    }
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -21,8 +21,13 @@
     "import seaborn as sns"
    ],
    "metadata": {
-    "collapsed": false
-   }
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "execution_count": null,
+   "outputs": []
   },
   {
    "cell_type": "markdown",
