수식 표기 업데이트

--- a/머신러닝SIGNATURE/ch01_regression_problem/07_Ridge.ipynb
+++ b/머신러닝SIGNATURE/ch01_regression_problem/07_Ridge.ipynb
@@ -637,7 +637,7 @@
     "        - 베타0를 0로 보내는 것 (베타0는 상수이기 때문에)\n",
     "    * max_iter : Maximum number of interation\n",
     "        - Loss Function의 Ridge Penalty Term은 Closed Form 값이기는 하지만 값을 찾아 나감\n",
-    "        - Penalty Term : (1 / (2 * n_samples)) * ||y - Xw||^2_2 + alpha * ||w||_2"
+    "        - Penalty Term : $(1 / (2 * n_samples)) * ||y - Xw||^2 + alpha * ||w||^2$"
    ],
    "metadata": {
     "collapsed": false,
