--- a/머신러닝SIGNATURE/ch01_regression_problem/09_LASSO.ipynb
+++ b/머신러닝SIGNATURE/ch01_regression_problem/09_LASSO.ipynb
@@ -362,7 +362,7 @@
     "    - 베타0를 0로 보내는 것 (베타0는 상수이기 때문에)\n",
     "  - max_iter : Maximum number of interation\n",
     "    - Loss Function의 LASSO Penalty Term은 절대 값이기 때문에 Gradient Descent와 같은 최적화가 필요함\n",
-    "    - Penalty Term : ||y - Xw||^2_2 + alpha * ||w||_1"
+    "    - Penalty Term : $||y - Xw||^2 + alpha * ||w||^1$"
    ],
    "metadata": {
     "collapsed": false,
