feat: linear test

--- a/딥러닝유치원/pratice/05-linear_layer/05-04-linear_layer.ipynb
+++ b/딥러닝유치원/pratice/05-linear_layer/05-04-linear_layer.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,19 +106,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([4, 2])\n"
+      "torch.Size([4, 2]) tensor([[11., 14.],\n",
+      "        [20., 26.],\n",
+      "        [29., 38.],\n",
+      "        [38., 50.]])\n"
      ]
     }
    ],
    "source": [
-    "print(y.size())"
+    "print(y.size(), y)"
    ]
   },
   {
