--- a/딥러닝유치원/pratice/07-gradient_descent/07-06-gradient_descent.ipynb
+++ b/딥러닝유치원/pratice/07-gradient_descent/07-06-gradient_descent.ipynb
@@ -47,12 +47,12 @@
     }
    ],
    "source": [
-    "x = torch.rand_like(target)\n",
+    "w = torch.rand_like(target)\n",
     "# This means the final scalar will be differentiate by x.\n",
-    "x.requires_grad = True\n",
+    "w.requires_grad = True\n",
     "# You can get gradient of x, after differentiation.\n",
     "\n",
-    "x"
+    "w"
    ]
   },
   {
@@ -72,7 +72,7 @@
     }
    ],
    "source": [
-    "loss = F.mse_loss(x, target)\n",
+    "loss = F.mse_loss(w, target)\n",
     "\n",
     "loss"
    ]
@@ -181,16 +181,16 @@
     "    \n",
     "    loss.backward() # Calculate gradients.\n",
     "\n",
-    "    x = x - learning_rate * x.grad\n",
+    "    w = w - learning_rate * w.grad\n",
     "    \n",
     "    # You don't need to aware this now.\n",
-    "    x.detach_()\n",
-    "    x.requires_grad_(True)\n",
+    "    w.detach_()\n",
+    "    w.requires_grad_(True)\n",
     "    \n",
-    "    loss = F.mse_loss(x, target)\n",
+    "    loss = F.mse_loss(w, target)\n",
     "    \n",
     "    print('%d-th Loss: %.4e' % (iter_cnt, loss))\n",
-    "    print(x)"
+    "    print(w)"
    ]
   },
   {
